syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package="./;proto";

service User {
  rpc CheckPassword(PasswordCheckInfo) returns (CheckResponse); //检查密码
  rpc GetUserList(PageInfo) returns (UserListResponse); //用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //通过手机查询用户
  rpc GetUserById(IdRequest) returns (UserInfoResponse); //通过id查询用户信息
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); //添加用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); //更新用户
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}
message CheckResponse {
  bool success = 1;
}
//分页信息
message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nickname = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickname = 2;
  uint32 gender = 3;
  uint64 birthday = 4;
}

//用户信息
message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickname = 4;
  uint64 birthday = 5;
  uint32 gender = 6;
  uint32 role = 7;

}

//用户信息列表
message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}